--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "vcs/have-all-post-meta",
+    "version": "1.0.0",
     "description": "DEVelopment plugin, adds a meta box to each edit page and shows a print_r of all post meta data for an entry\"",
     "type": "project",
     "license": "MIT",
