fix quotation mart in json'

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "haveboard/have-all-post-meta",
     "version": "1.0.0",
-    "description": "DEVelopment plugin, adds a meta box to each edit page and shows a print_r of all post meta data for an entry\"",
+    "description": "DEVelopment plugin, adds a meta box to each edit page and shows a print_r of all post meta data for an entry",
     "type": "library",
     "license": "MIT",
     "autoload": {
