change type to wordpress-muplugin

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "haveboard/have-all-post-meta",
     "version": "1.0.0",
     "description": "DEVelopment plugin, adds a meta box to each edit page and shows a print_r of all post meta data for an entry",
-    "type": "library",
+    "type": "wordpress-muplugin",
     "license": "MIT",
     "autoload": {
         "psr-4": {
